@@ -10,6 +10,9 @@ What's New in Python 3.2.4
 Core and Builtins
 -----------------
 
+- Issue #15604: Update uses of PyObject_IsTrue() to check for and handle
+  errors correctly.  Patch by Serhiy Storchaka.
+
 - Issue #13119: sys.stdout and sys.stderr are now using "\r\n" newline on
   Windows, as Python 2.
 
